# RoadAI

./: README.md  RawCode  application.py
Code/: main.py
RoadRecognition/: application.py  desktop_application.py  main.py  pyproject.toml  raw.py
RoadRecognition/enums/: __init__.py  applicaiton_arguments.py
RoadRecognition/exceptions/: __init__.py  camera_not_found_exception.py
RoadRecognition/models/: __init__.py  capture.py  road_recognition.py
RoadRecognition/services/: __init__.py  image_converter.py
rest_api/: manage.py  pyproject.toml
rest_api/applicaiton/: asgi.py  settings.py  urls.py  wsgi.py
rest_api/road_requests/: apps.py
rest_api/service/: __init__.py  road_service.py
src/: machine_learning.py
