[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = ""
authors = ["Ivan Lukovkin <121473397+iamlukovkin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
